# GeoTrust

./: .gitignore  ADD_MISSING_COUNTRIES.md  ALLOWED_COUNTRIES_SETUP.md  AZURE_409_FIX_NOW.md  AZURE_409_RESOLUTION.md  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_BACKEND.md  AZURE_DEPLOYMENT_CONFLICT.md  AZURE_ENV_VARS_FIX.md  AZURE_GEOLINK_ENV_SETUP.md  AZURE_SETUP_CREDENTIALS.md  AZURE_STARTUP_COMMAND.md  AZURE_STARTUP_FIX.md  AZURE_VERIFICATION.md  BUILD_INSTRUCTIONS.md  CONTRACT_POLICY_DESIGN.md  CORS_CONFIGURATION.md  COUNTRY_VAULT_IMPLEMENTATION.md  COUNTRY_VAULT_OPERATIONS_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_AZURE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEVELOPMENT.md  DOWNLOAD_COUNTRIES_GEOJSON.md  GAME_HUB_INTEGRATION_FIXED.md  GEOLINK_INTEGRATION.md  GITHUB_SECRETS_SETUP.md  HACKATHON_INTEGRATION.md  IMPLEMENTATION_COMPARISON.md  INSTALL_BUILD_TOOLS.md  MAPBOX_TOKEN_DEBUG.md  PROTOCOL_25_IMPLEMENTATION.md  PROTOCOL_25_STATUS.md  README.md  SCOUT_AUDIT_SETUP.md  SECURITY_FIXES_AND_FEATURES.md  SETUP.md  TROUBLESHOOTING.md  (+9 more)
.azure/: config.json
contracts/geotrust-match/: Cargo.toml  report.md
contracts/geotrust-match/src/: lib.rs  test.rs
public/: countries.geojson  index.html
scout-audit-results/: SCAN_SUMMARY.md  zk-verifier-scout-audit.md
scripts/: build-contract.sh  create-server.js  deploy-contract.sh  run-scout-audit.ps1  upgrade-both-contracts.ps1  upgrade-contract-fixed.ps1  upgrade-contract.ps1  upgrade-contract.sh
server/: index.js  package-lock.json  package.json
src/: AdminPanel.tsx  App.css  App.tsx  GamePanel.tsx  (+17 more)
(+51 files in other folders)
