[package]
name = "geotrust-match"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]
default = []

[dependencies]
soroban-sdk = "25.0.0"

[dev-dependencies]
soroban-sdk = { version = "25.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"          # Optimize for size
overflow-checks = true
debug = 0
strip = "symbols"        # Strip symbols to reduce size
debug-assertions = false
panic = "abort"          # Use abort instead of unwind for smaller binary
codegen-units = 1        # Better optimization
lto = true               # Link-time optimization
